--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="categories">
         <div class="category">
             <img src="Image/icon/hookah.png" alt="Shisha">
-            <h2>Shisha-Geschmacksrichtungen</h2>
+            <h2>Shisha</h2>
             <button onclick="toggleMenu('shisha-menu')">Anzeigen</button>
             <div class="menu-items" id="shisha-menu">
                 <p>Apfelgeschmack - 10€</p>
@@ -31,6 +31,17 @@
             <h2>Getränke</h2>
             <button onclick="toggleMenu('drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="drinks-menu">
+                <p>Orangensaft - 5€</p>
+                <p>Türkischer Kaffee - 3€</p>
+                <p>Marokkanischer Tee - 4€</p>
+            </div>
+        </div>
+
+        <div class="category">
+            <img src="Image/icon/coffee-cup.png" alt="Warm Getränke">
+            <h2>Warm Getränke</h2>
+            <button onclick="toggleMenu('warm-drinks-menu')">Anzeigen</button>
+            <div class="menu-items" id="warm-drinks-menu">
                 <p>Orangensaft - 5€</p>
                 <p>Türkischer Kaffee - 3€</p>
                 <p>Marokkanischer Tee - 4€</p>
