--- a/index.html
+++ b/index.html
@@ -20,36 +20,72 @@
             <h2>Shisha</h2>
             <button onclick="toggleMenu('shisha-menu')">Anzeigen</button>
             <div class="menu-items" id="shisha-menu">
-                <p>Apfelgeschmack - 10€</p>
-                <p>Traubengeschmack - 12€</p>
-                <p>Minzgeschmack - 9€</p>
+                <p>Apfel - 10€</p>
+                <p>Doppelapfel - 12€</p>
+                <p>Traube - 12€</p>
+                <p>Minze - 9€</p>
+                <p>Wassermelone - 11€</p>
+                <p>Pfirsich - 11€</p>
+                <p>Zitrone-Minze - 12€</p>
+                <p>Blaubeere - 12€</p>
+                <p>Erdbeere - 11€</p>
+                <p>Mango - 12€</p>
+                <p>Kirsche - 11€</p>
+                <p>Vanille - 10€</p>
+                <p>Kokosnuss - 12€</p>
+                <p>Energy (Red Bull Geschmack) - 13€</p>
+                <p>Mix (Eigene Kombination) - 14€</p>
             </div>
         </div>
+    </section>
 
+    <section class="categories">
         <div class="category">
             <img src="Image/icon/drinks.png" alt="Getränke">
             <h2>Getränke</h2>
             <button onclick="toggleMenu('drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="drinks-menu">
-                <p>Orangensaft - 5€</p>
-                <p>Türkischer Kaffee - 3€</p>
-                <p>Marokkanischer Tee - 4€</p>
+                <p>Bier - 4€</p>
+                <p>Weißwein - 5€</p>
+                <p>Rotwein - 5€</p>
+                <p>Whisky (Single) - 7€</p>
+                <p>Whisky (Double) - 12€</p>
+                <p>Wodka (Shot) - 4€</p>
+                <p>Gin Tonic - 8€</p>
+                <p>Rum Cola - 8€</p>
+                <p>Tequila (Shot) - 5€</p>
+                <p>Mojito - 9€</p>
+                <p>Caipirinha - 9€</p>
+                <p>Piña Colada - 10€</p>
+                <p>Margarita - 10€</p>
+                <p>Long Island Iced Tea - 12€</p>
             </div>
         </div>
+    </section>
 
+    <section class="categories">
         <div class="category">
             <img src="Image/icon/coffee-cup.png" alt="Warm Getränke">
             <h2>Warm Getränke</h2>
             <button onclick="toggleMenu('warm-drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="warm-drinks-menu">
-                <p>Orangensaft - 5€</p>
-                <p>Türkischer Kaffee - 3€</p>
-                <p>Marokkanischer Tee - 4€</p>
+                <p>Schwarzer Tee - 3€</p>
+                <p>Grüner Tee - 3,50€</p>
+                <p>Frischer Minztee - 4€</p>
+                <p>Heiße Schokolade - 4,50€</p>
+                <p>Espresso - 2,50€</p>
+                <p>Cappuccino - 4€</p>
+                <p>Latte Macchiato - 4,50€</p>
+                <p>Chai Latte - 5€</p>
+                <p>Ingwer-Zitronen-Tee - 4,50€</p>
+                <p>Heißer Apfelsaft mit Zimt - 5€</p>
+
             </div>
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </body>
 
 </html>
