--- a/index.html
+++ b/index.html
@@ -20,21 +20,72 @@
             <h2>Shisha</h2>
             <button onclick="toggleMenu('shisha-menu')">Anzeigen</button>
             <div class="menu-items" id="shisha-menu">
-                <p>Apfel - 10€</p>
-                <p>Doppelapfel - 12€</p>
-                <p>Traube - 12€</p>
-                <p>Minze - 9€</p>
-                <p>Wassermelone - 11€</p>
-                <p>Pfirsich - 11€</p>
-                <p>Zitrone-Minze - 12€</p>
-                <p>Blaubeere - 12€</p>
-                <p>Erdbeere - 11€</p>
-                <p>Mango - 12€</p>
-                <p>Kirsche - 11€</p>
-                <p>Vanille - 10€</p>
-                <p>Kokosnuss - 12€</p>
-                <p>Energy (Red Bull Geschmack) - 13€</p>
-                <p>Mix (Eigene Kombination) - 14€</p>
+                <table>
+                    <tr>
+                        <th class="name">Name</th>
+                        <th class="price">Price</th>
+                    </tr>
+                    <tr>
+                        <td>Apfel</td>
+                        <td>10 €</td>
+                    </tr>
+                    <tr>
+                        <td>Doppelapfel</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Traube</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Minze</td>
+                        <td>9 €</td>
+                    </tr>
+                    <tr>
+                        <td>Wassermelone</td>
+                        <td>11 €</td>
+                    </tr>
+                    <tr>
+                        <td>Pfirsich</td>
+                        <td>11 €</td>
+                    </tr>
+                    <tr>
+                        <td>Zitrone-Minze</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Blaubeere</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Erdbeere</td>
+                        <td>11 €</td>
+                    </tr>
+                    <tr>
+                        <td>Mango</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Kirsche</td>
+                        <td>11 €</td>
+                    </tr>
+                    <tr>
+                        <td>Vanille</td>
+                        <td>10 €</td>
+                    </tr>
+                    <tr>
+                        <td>Kokosnuss</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Energy (Red Bull Geschmack)</td>
+                        <td>13 €</td>
+                    </tr>
+                    <tr>
+                        <td>Mix (Eigene Kombination)</td>
+                        <td>14 €</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
@@ -45,41 +96,124 @@
             <h2>Getränke</h2>
             <button onclick="toggleMenu('drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="drinks-menu">
-                <p>Bier - 4€</p>
-                <p>Weißwein - 5€</p>
-                <p>Rotwein - 5€</p>
-                <p>Whisky (Single) - 7€</p>
-                <p>Whisky (Double) - 12€</p>
-                <p>Wodka (Shot) - 4€</p>
-                <p>Gin Tonic - 8€</p>
-                <p>Rum Cola - 8€</p>
-                <p>Tequila (Shot) - 5€</p>
-                <p>Mojito - 9€</p>
-                <p>Caipirinha - 9€</p>
-                <p>Piña Colada - 10€</p>
-                <p>Margarita - 10€</p>
-                <p>Long Island Iced Tea - 12€</p>
+                <table>
+                    <tr>
+                        <th class="name">Name</th>
+                        <th class="price">Price</th>
+                    </tr>
+                    <tr>
+                        <td>Bier</td>
+                        <td>4 €</td>
+                    </tr>
+                    <tr>
+                        <td>Weißwein</td>
+                        <td>5 €</td>
+                    </tr>
+                    <tr>
+                        <td>Rotwein</td>
+                        <td>5 €</td>
+                    </tr>
+                    <tr>
+                        <td>Whisky (Single)</td>
+                        <td>7 €</td>
+                    </tr>
+                    <tr>
+                        <td>Whisky (Double)</td>
+                        <td>12 €</td>
+                    </tr>
+                    <tr>
+                        <td>Wodka (Shot)</td>
+                        <td>4 €</td>
+                    </tr>
+                    <tr>
+                        <td>Gin Tonic</td>
+                        <td>8 €</td>
+                    </tr>
+                    <tr>
+                        <td>Rum Cola</td>
+                        <td>8 €</td>
+                    </tr>
+                    <tr>
+                        <td>Tequila (Shot)</td>
+                        <td>5 €</td>
+                    </tr>
+                    <tr>
+                        <td>Mojito</td>
+                        <td>9 €</td>
+                    </tr>
+                    <tr>
+                        <td>Caipirinha</td>
+                        <td>9 €</td>
+                    </tr>
+                    <tr>
+                        <td>Piña Colada</td>
+                        <td>10 €</td>
+                    </tr>
+                    <tr>
+                        <td>Margarita</td>
+                        <td>10 €</td>
+                    </tr>
+                    <tr>
+                        <td>Long Island Iced Tea</td>
+                        <td>12 €</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
 
     <section class="categories">
         <div class="category">
-            <img src="Image/icon/coffee-cup.png" alt="Warm Getränke">
+            <img src="Image/icon/coffee.png" alt="Warm Getränke">
             <h2>Warm Getränke</h2>
             <button onclick="toggleMenu('warm-drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="warm-drinks-menu">
-                <p>Schwarzer Tee - 3€</p>
-                <p>Grüner Tee - 3,50€</p>
-                <p>Frischer Minztee - 4€</p>
-                <p>Heiße Schokolade - 4,50€</p>
-                <p>Espresso - 2,50€</p>
-                <p>Cappuccino - 4€</p>
-                <p>Latte Macchiato - 4,50€</p>
-                <p>Chai Latte - 5€</p>
-                <p>Ingwer-Zitronen-Tee - 4,50€</p>
-                <p>Heißer Apfelsaft mit Zimt - 5€</p>
-
+                <table>
+                    <tr>
+                        <th class="name">Name</th>
+                        <th class="price">Price</th>
+                    </tr>
+                    <tr>
+                        <td>Schwarzer Tee</td>
+                        <td>3 €</td>
+                    </tr>
+                    <tr>
+                        <td>Grüner Tee</td>
+                        <td>3.50 €</td>
+                    </tr>
+                    <tr>
+                        <td>Frischer Minztee</td>
+                        <td>4 €</td>
+                    </tr>
+                    <tr>
+                        <td>Heiße Schokolade</td>
+                        <td>4.50 €</td>
+                    </tr>
+                    <tr>
+                        <td>Espresso</td>
+                        <td>2.50 €</td>
+                    </tr>
+                    <tr>
+                        <td>Cappuccino</td>
+                        <td>4 €</td>
+                    </tr>
+                    <tr>
+                        <td>Latte Macchiato</td>
+                        <td>4.50 €</td>
+                    </tr>
+                    <tr>
+                        <td>Chai Latte</td>
+                        <td>5 €</td>
+                    </tr>
+                    <tr>
+                        <td>Ingwer-Zitronen-Tee</td>
+                        <td>4.50 €</td>
+                    </tr>
+                    <tr>
+                        <td>Heißer Apfelsaft mit Zimt</td>
+                        <td>5 €</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
