--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why No? Menü</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body>
+<body background="assets/img/background.jpg">
 
     <header>
-        <h1><img src="Image/logo.png" class="logo"></h1>
+        <h1><img src="assets/img/logo.png" class="logo"></h1>
     </header>
 
     <section class="categories">
         <div class="category">
-            <img src="Image/icon/hookah.png" alt="Shisha">
+            <img src="assets/img/icon/hookah.png" alt="Shisha">
             <h2>Shisha</h2>
             <button onclick="toggleMenu('shisha-menu')">Anzeigen</button>
             <div class="menu-items" id="shisha-menu">
@@ -92,7 +92,7 @@
 
     <section class="categories">
         <div class="category">
-            <img src="Image/icon/drinks.png" alt="Getränke">
+            <img src="assets/img/icon/drinks.png" alt="Getränke">
             <h2>Getränke</h2>
             <button onclick="toggleMenu('drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="drinks-menu">
@@ -164,7 +164,7 @@
 
     <section class="categories">
         <div class="category">
-            <img src="Image/icon/coffee.png" alt="Warm Getränke">
+            <img src="assets/img/icon/coffee.png" alt="Warm Getränke">
             <h2>Warm Getränke</h2>
             <button onclick="toggleMenu('warm-drinks-menu')">Anzeigen</button>
             <div class="menu-items" id="warm-drinks-menu">
@@ -218,8 +218,7 @@
         </div>
     </section>
 
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
 </body>
 
 </html>
