--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Shisha -->
             <div class="category">
                 <img src="assets/img/icons/hookah.png" alt="Shisha">
-                <h2>Shisha </h2>
+                <h2>Shisha</h2>
                 <button aria-controls="shisha-menu" aria-expanded="false"
                     onclick="toggleMenu('shisha-menu')">Anzeigen</button>
                 <div class="menu-items" id="shisha-menu">
@@ -46,7 +46,7 @@
             <!-- Heißgetränke-->
             <div class="category">
                 <img src="assets/img/icons/coffee.png" alt="Heißgetränke">
-                <h2>Heißgetränke ☕</h2>
+                <h2>Heißgetränke</h2>
                 <button aria-controls="warm-drinks-menu" aria-expanded="false"
                     onclick="toggleMenu('warm-drinks-menu')">Anzeigen</button>
                 <div class="menu-items" id="warm-drinks-menu">
@@ -129,7 +129,7 @@
             <!-- Softdrinks -->
             <div class="category">
                 <img src="assets/img/icons/softdrinks.png" alt="Softdrinks">
-                <h2>Softdrinks 🥤</h2>
+                <h2>Softdrinks</h2>
                 <button aria-controls="softdrinks-menu" aria-expanded="false"
                     onclick="toggleMenu('softdrinks-menu')">Anzeigen</button>
                 <div class="menu-items" id="softdrinks-menu">
@@ -327,7 +327,7 @@
             <!-- Biere & Weine -->
             <div class="category">
                 <img src="assets/img/icons/beer-wine.png" alt="Biere & Weine">
-                <h2>Biere & Weine </h2>
+                <h2>Biere & Weine</h2>
                 <button aria-controls="beer-wine-menu" aria-expanded="false"
                     onclick="toggleMenu('beer-wine-menu')">Anzeigen</button>
                 <div class="menu-items" id="beer-wine-menu">
@@ -408,7 +408,7 @@
             <!-- Cocktails & Longdrinks -->
             <div class="category">
                 <img src="assets/img/icons/cocktail.png" alt="Cocktails & Longdrinks">
-                <h2>Cocktails & Longdrinks </h2>
+                <h2>Cocktails & Longdrinks</h2>
                 <button aria-controls="cocktails-menu" aria-expanded="false"
                     onclick="toggleMenu('cocktails-menu')">Anzeigen</button>
                 <div class="menu-items" id="cocktails-menu">
@@ -550,7 +550,7 @@
             <!-- Shots & Flaschen -->
             <div class="category">
                 <img src="assets/img/icons/shots.png" alt="Shots & Flaschen">
-                <h2>Shots & Flaschen </h2>
+                <h2>Shots & Flaschen</h2>
                 <button aria-controls="shots-menu" aria-expanded="false"
                     onclick="toggleMenu('shots-menu')">Anzeigen</button>
                 <div class="menu-items" id="shots-menu">
@@ -606,7 +606,7 @@
             <!-- Snacks -->
             <div class="category">
                 <img src="assets/img/icons/snacks.png" alt="Snacks">
-                <h2>Snacks </h2>
+                <h2>Snacks</h2>
                 <button aria-controls="snacks-menu" aria-expanded="false"
                     onclick="toggleMenu('snacks-menu')">Anzeigen</button>
                 <div class="menu-items" id="snacks-menu">
