--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                                 <td colspan="2"><b>Alkoholfreie Getränke</b></td>
                             </tr>
                             <tr>
+                                <td>Club-Mate 0.3l</td>
+                                <td>3.50 €</td>
+                            </tr>
+                            <tr>
                                 <td>Fruchtsaft</td>
                                 <td>4.50 €</td>
                             </tr>
@@ -376,6 +380,10 @@
                                 <td>3.80 €</td>
                             </tr>
                             <tr>
+                                <td>Desperados Mojito</td>
+                                <td>3.80 €</td>
+                            </tr>
+                            <tr>
                                 <td>Weizen 0.5l</td>
                                 <td>5.00 €</td>
                             </tr>
@@ -386,6 +394,30 @@
                             <tr>
                                 <td>Bier gezapft 0.5l</td>
                                 <td>5.00 €</td>
+                            </tr>
+                            <tr>
+                                <td>Königsbacher 0.3l</td>
+                                <td>3.50 €</td>
+                            </tr>
+                            <tr>
+                                <td>Gösser NaturRadler 0.3l</td>
+                                <td>3.50 €</td>
+                            </tr>
+                            <tr>
+                                <td>Corona Extra 0.3l</td>
+                                <td>3.50 €</td>
+                            </tr>
+                            <tr>
+                                <td>Spaten Münchner Hell 0.3l</td>
+                                <td>3.50 €</td>
+                            </tr>
+                            <tr>
+                                <td>Tannenzäpfle 0.3l</td>
+                                <td>3.50 €</td>
+                            </tr>
+                            <tr>
+                                <td>Bayreuther Hell 0.3l</td>
+                                <td>3.50 €</td>
                             </tr>
                             <tr>
                                 <td colspan="2"><b>Weine</b></td>
