--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
                 <div class="menu-items" id="shisha-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -52,10 +48,6 @@
                 <div class="menu-items" id="warm-drinks-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -87,7 +79,7 @@
                                 <td>3.00 €</td>
                             </tr>
                             <tr>
-                                <td>Türkischer Kirsc</td>
+                                <td>Türkischer Kirsch</td>
                                 <td>3.00 €</td>
                             </tr>
                             <tr>
@@ -135,10 +127,6 @@
                 <div class="menu-items" id="softdrinks-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -283,9 +271,6 @@
                                 <td>3.50 €</td>
                             </tr>
                             <tr>
-                                <td colspan="2"><b>Alkoholfreie Getränke</b></td>
-                            </tr>
-                            <tr>
                                 <td>Club-Mate 0.3l</td>
                                 <td>3.50 €</td>
                             </tr>
@@ -350,10 +335,6 @@
                 <div class="menu-items" id="beer-wine-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -459,10 +440,6 @@
                 <div class="menu-items" id="cocktails-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -505,21 +482,6 @@
                                 <td>8.80 €</td>
                             </tr>
                             <tr>
-                                <td>Five Fruit</td>
-                                <td>7.30 €</td>
-                            </tr>
-                            <tr>
-                                <td>Frischer Mojito</td>
-                                <td>7.30 €</td>
-                            </tr>
-                            <tr>
-                                <td>Solero</td>
-                                <td>7.30 €</td>
-                            </tr>
-                            <tr>
-                                <td colspan="2"><b>Longdrinks</b></td>
-                            </tr>
-                            <tr>
                                 <td>Long Island Iced Tea</td>
                                 <td>9.70 €</td>
                             </tr>
@@ -532,6 +494,21 @@
                                 <td>7.00 €</td>
                             </tr>
                             <tr>
+                                <td colspan="2"><b>Alkoholfrei Cocktails</b></td>
+                            </tr>
+                            <tr>
+                                <td>Five Fruit</td>
+                                <td>7.30 €</td>
+                            </tr>
+                            <tr>
+                                <td>Frischer Mojito</td>
+                                <td>7.30 €</td>
+                            </tr>
+                            <tr>
+                                <td>Solero</td>
+                                <td>7.30 €</td>
+                            </tr>
+                            <tr>
                                 <td>Coconut Kiss</td>
                                 <td>7.30 €</td>
                             </tr>
@@ -540,7 +517,7 @@
                                 <td>6.50 €</td>
                             </tr>
                             <tr>
-                                <td colspan="2"><b>Mixgetränke</b></td>
+                                <td colspan="2"><b>Longdrinks</b></td>
                             </tr>
                             <tr>
                                 <td>Banana-Weizen</td>
@@ -584,10 +561,6 @@
                 <div class="menu-items" id="shots-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <td colspan="2"><b>Shots</b></td>
@@ -623,7 +596,7 @@
                                 <td>75.00 €</td>
                             </tr>
                             <tr>
-                                <td>Wodka +4 Red Bul</td>
+                                <td>Wodka + 4 Red Bul</td>
                                 <td>75.00 €</td>
                             </tr>
                             <tr>
@@ -640,10 +613,6 @@
                 <div class="menu-items" id="snacks-menu">
                     <table>
                         <thead>
-                            <tr>
-                                <th class="name">Name</th>
-                                <th class="price">Preis</th>
-                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -651,7 +620,7 @@
                                 <td>6.50 €</td>
                             </tr>
                             <tr>
-                                <td>Erdmüsse</td>
+                                <td>Erdnüsse</td>
                                 <td>2.00 €</td>
                             </tr>
                             <tr>
