--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
 
         <div class="footer-bottom">
             <p>
-                © 2025 Why Not? - Shisha Bar. All rights reserved. Created by Why Not.
+                © 2025 Why Not? - Shisha Bar. All rights reserved. Created by Zain Rahjeh.
             </p>
         </div>
     </div>
